# Perle_Beads_Generator

./: .gitignore  .gitmodules  144-perler-palette.json  CMakeLists.txt  README.md  collect_sources.py  meson.build
GridOCR/: .gitignore  end_ocr.ipynb
GridOCR/Text-Remove-Model/: load_onnx.py
src/: ColorPalette.cpp  ColorPalette.h  ColorUtils.cpp  ColorUtils.h  ConfigParser.cpp  ConfigParser.h  ImageProcessor.cpp  ImageProcessor.h  PaletteData.h  PerlerGenerator.cpp  PerlerGenerator.h  Types.h  main.cpp
src/app/: convert.cppm
src/types/: base.h  type.base.cppm  type.color.cppm  type.convert.cppm  type.cppm  type.palette.cppm  type.pixel.cppm
src/utils/: color_utils.cpp
subprojects/: cairomm.wrap  cxxopts.wrap
tests/: meson.build  test_cairomm.cpp
